사용자 탈퇴 기록 추가 및 조회, 사용자 최근 접속 기록 추가 및 조회 구현 추가
