# server/api/controllers/admin/router.js
@@ -1,0 +1,8 @@
+import * as express from 'express';
+import controller from './controller';
+
+export default express
+  .Router()
+  .get('/withdrawal', controller.getWithdrawalHistory)
+  .get('/connection', controller.getUserConnectionHistory);
+
