# server/api/controllers/questionaire/router.js
@@ -6,6 +6,8 @@ export default express
   .Router()
   .get('/', controller.getAllQuestionaireList)
   .get('/:questionaireId', controller.getQuestionItemsById)
+  .put('/item/:questionItemId', controller.updateQuestionItemById)
+  .put('/', controller.updateQuestionaireById)
   .post('/create', controller.createQuestionaire)
   .post('/:questionaireId/addQuestionItem', controller.addQuestionItemToQuestionaire)
   .post('/:userId/:questionItemId/answers', controller.answer);
